--- a/erp/templates/base_generic.html
+++ b/erp/templates/base_generic.html
@@ -321,7 +321,7 @@
 	<script  type="text/javascript" src="{% static 'erp/js/ui-client.js' %}"></script>
 	<script type="text/javascript" src="{% static 'libs/jquery/bootstrap-datepicker/js/bootstrap-datepicker.js' %}"></script>
 	<script type="text/javascript" src="{% static 'libs/jquery/bootstrap-datepicker/js/bootstrap-datepicker.es.min.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 	<script src="https://code.jquery.com/color/jquery.color-2.1.2.min.js"></script>
 
 	{% block scrypts %}{% endblock %}
